--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -4,6 +4,6 @@ data.url=jdbc:mysql://localhost:3306/xywk?useUnicode=true&characterEncoding=utf-
 
 data.username=root
   
-data.password=feng
+data.password=123456
 
 
